--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-router": "^1.111.11",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.2",
     "tailwindcss": "^4.0.9"
